adds a preferences file and a menu item to interact with the preferences

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,8 +32,11 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name=".PrefsActivity"
+            android:label="@string/titlePrefs" />
+
         <service android:name=".services.ReadFromWebService" />
-        
     </application>
 
 </manifest>
