--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <uses-sdk android:minSdkVersion="10" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <receiver
-            android:name=".bootup.BootUpReceiver"
+            android:name=".receivers.BootUpReceiver"
             android:enabled="true"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
             <intent-filter>
@@ -20,6 +21,13 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </receiver>
+        
+        <receiver android:name=".receivers.SmsReceiver"> 
+            <intent-filter> 
+                <action android:name=
+                    "android.provider.Telephony.SMS_RECEIVED" /> 
+            </intent-filter> 
         </receiver>
 
         <activity
