--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,10 +29,17 @@
                     "android.provider.Telephony.SMS_RECEIVED" /> 
             </intent-filter> 
         </receiver>
+        
+       <receiver android:name=".WakeMeActivity$MyBroadcastMessageReceiver" android:enabled="true"> 
+            <intent-filter> 
+                <action android:name=
+                    "com.jos.aiservices.android.intent.action.BroadcastReceiver" /> 
+            </intent-filter> 
+        </receiver>
 
         <activity
-            android:name=".AiServicesActivity"
-            android:label="@string/app_name" >
+            android:name=".WakeMeActivity"
+            android:label="@string/titleWakeme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,8 +50,14 @@
         <activity
             android:name=".PrefsActivity"
             android:label="@string/titlePrefs" />
+        
+        <activity
+            android:name=".AiServicesActivity"
+            android:label="@string/app_name" />
 
         <service android:name=".services.ReadFromWebService" />
+        <service android:name=".services.WakeUpService" />
+        
     </application>
 
 </manifest>
